data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1168.wast
;; 9. **Test Description**:     Implement a sequence of loops each containing a `br_table` instruction, incrementally increasing the boundary conditions of target indices at runtime.     - **Constraint**: Validate `br_table` behavior under incrementally increasing index boundaries.     - **Edge Case**: Tests progressive boundary checking for index out-of-bounds behavior.

(assert_invalid
  (module
    (func (result i32)
      (loop (block (loop (result i32) (br_table 0 1 (i32.const 1)))) (end))
    )
  )
  "type mismatch"
)